unpackaged/main/default/objects/ChampifyIo__ChampifyChangeDataCapture__c/ChampifyIo__ChampifyChangeDataCapture__c.object-meta.xml
<CustomObject>
    <description>Captures changes in SObject fields</description>
    <label>Champify Change Data Capture</label>
    <nameField>
        <label>SObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Champify Change Data Capture</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>