unpackaged/main/default/objects/ChampifyIo__ChampifyChangeDataCapture__c/fields/ChampifyIo__ChangeType__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__ChangeType__c</fullName>
    <label>Change Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>