unpackaged/main/default/objects/ChampifyIo__ChampifyChangeDataCapture__c/fields/ChampifyIo__DebugInfo__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__DebugInfo__c</fullName>
    <label>Debug Info</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>