unpackaged/main/default/objects/ChampifyIo__ChampifyChangeDataCapture__c/fields/ChampifyIo__Handler__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Handler__c</fullName>
    <description>Name of the Job that is expected to handle this change</description>
    <label>Handler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>