unpackaged/main/default/objects/ChampifyIo__ChampifyChangeDataCapture__c/fields/ChampifyIo__NewValue__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__NewValue__c</fullName>
    <label>New Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>