unpackaged/main/default/objects/ChampifyIo__ChampifyChangeDataCapture__c/fields/ChampifyIo__OldValue__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__OldValue__c</fullName>
    <label>Old Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>