unpackaged/main/default/objects/ChampifyIo__ChampifyChangeDataCapture__c/fields/ChampifyIo__SObjectId__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__SObjectId__c</fullName>
    <label>SObject Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>